# ussd-flow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cache.json  compose.yml  index.html  pylintrc  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: flow-ui.yml  lint-test.yml  publish.yml  python-package.yml
assets/: index-BF-Xs0Xt.css  index-Dvg2LveT.js
data/: menu.json  sample.json
fastapi_demo/: main.py
fastapi_demo/actions/: __init__.py  account.py  bank.py
flask_demo/: app.py
flow-ui/: .env.production  index.html  merge-build.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vueform.config.ts
flow-ui/docs/: index.md
flow-ui/docs/.vitepress/: config.ts
flow-ui/docs/.vitepress/theme/: index.ts
flow-ui/docs/guide/: action-registry.md  caching.md  django-api.md  dynamic-menu-intro.md  fast-api.md  flask-api.md  getting-started.md  menu-builder.md  ussd-flow.md  ussd-intro.md
flow-ui/src/: App.vue  main.ts  router.ts  style.scss
flow-ui/src/components/: CustomNode.vue  CustomSelect.vue  CustomTextArea.vue  HomeDoc.vue  PhoneDialer.vue  PhoneDialog.vue  SideBar.vue  ToastComponent.vue  initial-elements.ts
flow-ui/src/data/: menu.json
flow-ui/src/docs/.vitepress/: config.js
flow-ui/src/forms/: MenuLevelForm.vue
flow-ui/src/layout/: MainLayout.vue
flow-ui/src/pages/: DesignerPage.vue
flow-ui/src/services/: menu.ts
flow-ui/src/stores/: menu.ts  phone-dialog.ts  toast.ts
flow-ui/src/types/: ussd.ts
flow-ui/src/typings/: vue-icon.d.ts
flow-ui/src/widgets/: CustomNode.vue  HelloWorld.vue  Icon.vue  MenuBuilder.vue  PhoneDialog.vue  SideBar.vue
lib/: cache.py  models.py  router.py  utils.py
tests/: menu.json
tests/data/: menu.json
tests/ussd_lib/: conftest.py  test_cache.py  test_router.py
ussd_demo/: main.py
ussd_demo/actions/: __init__.py  account.py  bank.py
ussd_lib/: cache.py  models.py  router.py  utils.py
ussdflow/: __init__.py  cache.py  models.py  router.py
