[tool.poetry]
name = "ussdflow"
version = "0.1.10"
description = ""
authors = ["Adams Okode <adamsokode@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ussdflow" }
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-postgresql = "^6.0.0"
pre-commit = "^3.7.1"
pylint = "^3.2.2"
flake8 = "^7.0.0"
autopep8 = "^2.1.1"
black = "^24.4.2"
isort = "^5.13.2"
autoflake = "^2.3.1"
flask = "^3.0.3"
django = "^5.0.6"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
